fix: button hover disabled on mobile through media queries, causes problems

--- a/src/components/Button/button.module.scss
+++ b/src/components/Button/button.module.scss
@@ -7,6 +7,12 @@
   }
 }
 
+@mixin mobile-up {
+  @media (min-width: 500px) {
+    @content;
+  }
+}
+
 .btn {
   width: fit-content;
   min-height: 48px;
@@ -36,8 +42,10 @@
     @include active-element-state;
   }
 
-  &:hover {
-    @include active-element-state;
-    transform: translateY(-1px);
+  @include mobile-up {
+    &:hover {
+      @include active-element-state;
+      transform: translateY(-1px);
+    }
   }
 }
